# CreateBigCannonsDiscordBot

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  bot.py  compose.dev.yml  compose.prod.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: release-ghcr.yml
config/: settings.dev.toml  settings.prod.toml
extensions/addonsquared/: advancedtechnologies.py  cbc_modernwarfare.py  nuclear.py  tanktussle.py
extensions/base/: manager.py
extensions/curseforge/: curseforge.py
extensions/download/: download.py
extensions/github/: github.py
extensions/moderator/: moderator.py
extensions/nightly/: nightly.py
extensions/stars/: stars.py
src/cbcbot/: __init__.py  __main__.py  bot.py
src/cbcbot/extensions/addonsquared/: advancedtechnologies.py  cbc_modernwarfare.py  nuclear.py  tanktussle.py
src/cbcbot/extensions/base/: manager.py
src/cbcbot/extensions/curseforge/: curseforge.py
src/cbcbot/extensions/github/: github.py
src/cbcbot/extensions/moderator/: moderator.py  quicksand.py
src/cbcbot/extensions/stars/: stars.py
src/cbcbot/utils/: embeds.py  exeptions.py  role_positions.py  settings.py
tests/: test_placeholder.py  test_smoke_imports.py
utils/: embeds.py  env.py
